--- a/html/form-html/index.html
+++ b/html/form-html/index.html
@@ -10,7 +10,7 @@
         <form action="https://formspree.io/olacencora@gmail.com" method="POST"><br>
             <input type="text" name="name" placeholder="wpisz imię"><br>
             <input type="email" name="_replyto" placeholder="wpisz email"><br>
-            <input type="texy" name="phone" placeholder="numer telefonu"><br>
+            <input type="text" name="phone" placeholder="numer telefonu"><br>
             <textarea name="message" maxlength="500"></textarea>
             <input type="submit" value="wyślij">
         </form>
