--- a/html/html-examples/index.html
+++ b/html/html-examples/index.html
@@ -95,7 +95,7 @@
     <!-- interaktywana ramka np mapy z google albo filmiki -->
     <iframe width="560" height="315" src="https://www.youtube.com/embed/JDG2m5hN1vo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <!-- grafika wektorowa - lekka i latwiej sie style nakłada -->
+    <!-- grafika wektorowa - lekka i latwiej sie style nakłada, dołączane do kodu albo inline albo przez img tak jak foto -->
     <svg style="height: 100px;">
             <path d="M30.148 5.588c-2.934-3.42-7.288-5.588-12.148-5.588-8.837 0-16 7.163-16
             16s7.163 16 16 16c4.86 0 9.213-2.167 12.148-5.588l-10.148-10.412 10.148-
@@ -103,6 +103,11 @@
             0.999-2.231-2.231c0-1.232 0.999-2.231 2.231-2.231z"></path>
     </svg>
     <img src="file.svg" alt="Plik SVG">
+
+    
+
+
+
     <br>
     <br>
     <br>
