--- a/html/zadanie-2-formularz/index.html
+++ b/html/zadanie-2-formularz/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>a simple form</h1>
-  <form action="https://formspree.io/olacencora@gmail.com" method="POST">
+  <form action="https://formspree.io/olacencora@gmail.com" method="POST" autocomplete="on">
     <fieldset>Customer Info:
 
       <label for="name">Name:
@@ -18,7 +18,7 @@
       </label>
 
       <label for="tel">Telephone:
-        <input type="tel" name="phone" id="phone" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}" required placeholder="Pattern: 1-234-567-8910">
+        <input type="tel" name="phone" id="tel" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}" required placeholder="Pattern: 1-234-567-8910">
       </label>
 
       <label for="email">Email address:
@@ -36,7 +36,7 @@
           <option value="ostatnie_zyczenie">Ostatnie Życzenie</option>
       </select>
 
-      <label for="number">Quantity (max 5)
+      <label for="quantity">Quantity (max 5)
         <input type="number" name="quantity" id="quantity" min="1" max="5">
       </label>
 
