--- a/strona-zadanie-domowe/index.html
+++ b/strona-zadanie-domowe/index.html
@@ -8,8 +8,74 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Syncopate&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="main-header" id="header-anchor">
+        <nav class="navigation">
+            <ul class="navigation-box">
+                <li class="navigation-items"><a href="#artists-anchor" class="navigation-links" target="_blank">artists</a></li>
+                <li class="navigation-items"><a href="#" class="navigation-links" target="_blank">works</a></li>
+                <li class="navigation-items"><a href="#" class="navigation-links" target="_blank">info</a></li>
+            </ul>
+        </nav>
+        <div class="container">
+            <hr class="line-top">
+            <h1>exhibition</h1>
+            <hr class="line-bottom">
+        </div>
+    </header>
+    <div class="up">
+       <a href="#header-anchor"><span>&#8593;</span></a> 
+    </div> 
+    <section class="artists-section">
+        <div class="navigation" id="artists-anchor">
+            <ul class="navigation-box">
+                <li class="navigation-items"><a href="#" class="navigation-links">René Descartes</a></li>
+                <li class="navigation-items"><a href="#" class="navigation-links">Eugène Delacroix</a></li>
+                <li class="navigation-items"><a href="#" class="navigation-links">Marie Antoinette</a></li>
+                <li class="navigation-items"><a href="#" class="navigation-links">Jean Jacques Rousseau</a></li>
+            </ul>
+        </div>
+        <div class="artists-main-section">
+            <ul class="artists-nav-box">
+                <li class="artists-nav-items">
+                    <div class="photo-box">
+                        <img src="img/3artist.jpg" alt="artist rene descartes">
+                    </div>
+                    <p>Sapiente adipisci aliquid ipsam fugit cum debitis alias porro inventore, accusamus eaque natus quas, tenetur dolore exercitationem nostrum dolorum? Deserunt sit quo modi maiores labore, aliquam, inventore officiis hic atque quia quidem! Explicabo magnam facilis facere tempore soluta cupiditate itaque est doloremque consequatur accusamus labore et beatae officia eaque minima quas minus, eum eos. Magnam cumque quisquam consequatur maxime fugit.</p>
+                </li>
+                <li class="artists-nav-items">
+                    <div class="photo-box">
+                        <img src="img/artist (3).jpg" alt="artist Eugène Delacroix">
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At perferendis quo cumque sint possimus suscipit perspiciatis inventore amet quas libero. Culpa blanditiis a debitis quae non. Similique veritatis recusandae accusantium? Corrupti consequatur ea impedit repudiandae, excepturi ut delectus. Vel autem beatae, non dignissimos sint neque iste eos.Explicabo magnam facilis facere tempore soluta cupiditate itaque est doloremque consequatur accusamus labore et beatae officia eaque minima quas minus, eum eos</p>
+                </li>
+                <li class="artists-nav-items">
+                    <div class="photo-box">
+                        <img src="img/artist (4).jpg" alt="artist Marie Antoinette">
+                    </div>    
+                    <p>Illum consequuntur odio possimus, repudiandae pariatur sapiente cumque ea, totam laboriosam nobis veniam quis unde beatae, aspernatur iste culpa aliquam dolore eum autem amet nihil nulla corrupti sequi. Quasi ea veniam quos fuga earum illo facere? Et quo laboriosam aut. Similique, fugit iusto deleniti soluta porro nesciunt voluptatibus sit? Fuga nisi excepturi non tenetur eveniet autem neque fugit cumque quos, quia officiis consequatur iste magnam! Ea sit est animi recusandae facilis similique illum, exercitationem cupiditate?</p>
+                </li>
+                <li class="artists-nav-items">
+                    <div class="photo-box">
+                        <img src="img/artist (1).jpg" alt="artist Jean Jacques Rousseau">
+                    </div>
+                    <p>Illum consequuntur odio possimus, repudiandae pariatur sapiente cumque ea, totam laboriosam nobis veniam quis unde beatae, aspernatur iste culpa aliquam dolore eum autem amet nihil nulla corrupti sequi. Quasi ea veniam quos fuga earum illo facere? Et quo laboriosam aut. Similique, fugit iusto deleniti soluta porro nesciunt voluptatibus sit? Alias magnam recusandae impedit suscipit commodi optio pariatur fuga, corrupti architecto sapiente, sit eum consequuntur illum quisquam! Saepe facere commodi porro inventore ullam.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="works">
+        <section class="works-section">
+            <div class="navigation" id="works-anchor">
+                <ul class="navigation-box">
+                    <li class="navigation-items"><a href="#" class="navigation-links">street art</a></li>
+                    <li class="navigation-items"><a href="#" class="navigation-links">people</a></li>
+                    <li class="navigation-items"><a href="#" class="navigation-links">nature</a></li>
+                </ul>
+            </div>
+        </section>
 </body>
 </html>
+
