--- a/css/css-zadania/16-zadanie-domowe-odliczanie/index.html
+++ b/css/css-zadania/16-zadanie-domowe-odliczanie/index.html
@@ -22,6 +22,9 @@
         <div class="box-0 small-box">
             <p>0</p>
         </div>
+        <div class="box-love small-box">
+            <p>I love CSS</p>
+        </div>
     </div>  
 </body>
 </html>
