--- a/css/css-zadania/16-zadanie-domowe-odliczanie/index.html
+++ b/css/css-zadania/16-zadanie-domowe-odliczanie/index.html
@@ -10,6 +10,27 @@
 </head>
 <body>
     <div class="main-box">
+        <div class="box-10 small-box">
+            <p>10</p>
+        </div>
+        <div class="box-9 small-box">
+            <p>9</p>
+        </div>
+        <div class="box-8 small-box">
+            <p>8</p>
+        </div>
+        <div class="box-7 small-box">
+            <p>7</p>
+        </div>
+        <div class="box-6 small-box">
+            <p>6</p>
+        </div>
+        <div class="box-5 small-box">
+            <p>5</p>
+        </div>
+        <div class="box-4 small-box">
+            <p>4</p>
+        </div>
         <div class="box-3 small-box">
             <p>3</p>
         </div>
@@ -28,3 +49,4 @@
     </div>  
 </body>
 </html>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat voluptate, architecto autem saepe voluptatibus magnam odio inventore enim? Quia cumque at ratione accusamus cupiditate porro corrupti nesciunt repellendus placeat vero.
