--- a/sass - warsztaty/gulp-project/app/index.html
+++ b/sass - warsztaty/gulp-project/app/index.html
@@ -1,67 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <!-- fontawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <!-- google font -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=latin-ext" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+
+	<!-- Font Google -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&amp;subset=latin-ext" rel="stylesheet">
+  
+  <!-- Font Awesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="wrapper">
-    <!-- navsection -->
-    <header class="main-header">
-        <nav class="containter">   
-                <div class="main-logo">
-                    <i class="fas fa-landmark"></i>
-                    <h1>Finanse</h1>
-                </div>
-                <div class="header-contact">
-                    <i class="fas fa-phone fa-flip-horizontal"></i>
-                    <div class="contact-info">
-                        <span>Zadzwoń do nas</span>
-                        <span>+22 000 00 123</span>
-                    </div>
-                </div>
-            </ul>
-        </nav>
-    </header>
-    <!-- main section -->
-    <main class="form-section">
-        <section class="container">
-            <div class="form-section-item">
-                <h2>Zostaw <span>sparawy finansowe</span>nam <span>skup się na swoim biznesie</span></h2>
-                <form class="form-main">
-                    <header>Zostaw swoje dane, a my się z Tobą skontaktujemy</header>
-                    <input class="input-item" type="text" placeholder="Imię i Nazwisko">
-                    <input class="input-item"  type="email" placeholder="Email">
-                    <input class="input-item"  type="tel" placeholder="Telefon">
-                    <textarea class="input-item"  placeholder="Wiadomość"></textarea>
-                    <input value="Wyślij" type="submit" class="btn"></input>
-                </form>
-            </div>
-        </section>
-    </main>
-</div>
-    <!-- footer -->
-    <footer class="footer-buttons">
-        <div class="container">
-            <div class="footer-item">
-                <i class="fas fa-phone"></i>
-                <span>+22 000 00 123</span>
-            </div>
-            <div class="footer-item">
-                <i class="fas fa-envelope"></i>
-                <span>kursy@akademia108.pl</span>
-            </div>
-            <div class="container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto magnam repellendus consequatur animi illum quaerat unde ab aperiam! Rem et hic modi unde vel tempore nulla, qui quod dolores aspernatur!</div>
-        </div>
-    </footer>
 
-    
+  <header class='main-header'>
+    <div class="container">
+      <div class='main-logo'>
+        <i class="fas fa-university"></i>
+        <h1>Finanse</h1>
+      </div>
+      <div class='header-contact'>
+          <i class="fas fa-phone fa-flip-horizontal"></i>
+          <div class='contact-info'>
+            <span>Zadzwoń do nas</span>
+            <span>+ 22 00 000 123</span>
+          </div>
+      </div>
+    </div>
+  </header>
+
+  <section class="form-section">
+    <div class="container">
+      <div class="form-section-item">
+        <h2>Zostaw <span>sprawy finansowe</span> nam <span> się na swoim biznesie</span></h2>
+        <form action="">
+          <header>Zostaw swoje dane, a my się z Tobą skontaktujemy</header>
+          <input type="text">
+          <input type="mail">
+          <input type="tel">
+          <textarea name=""></textarea>
+          <input type="submit" value="Wyslij">
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <div class="footer-item">
+          <i class="fas fa-phone fa-flip-horizontal"></i>
+          <span>+ 22 00 000 123</span>
+      </div>
+      <div class="footer-item">
+          <i class="fas fa-envelope"></i>
+          <span>kursy@akademia108.pl</span>
+      </div>
+    </div>
+    <div class="container">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi iure exercitationem autem porro repellendus delectus! Repellendus exercitationem inventore deserunt officiis libero, praesentium eius vero voluptatibus sunt similique nemo, aperiam est.</p>
+    </div>
+  </footer>
+
 </body>
 </html>
