first example done

--- a/js/8-cwiczenia/data-uodzenia.html
+++ b/js/8-cwiczenia/data-uodzenia.html
@@ -7,8 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="btn">click me</button>
-    <!-- <script src="main.js"></script> -->
-    <script src="async.js"></script>
+    
+    <p id="p-first">wyswietl odpowiedź:</p>
+    <script src="data-urodzenia-main.js"></script>
   </body>
 </html>
