--- a/js/8-cwiczenia/examples.html
+++ b/js/8-cwiczenia/examples.html
@@ -7,8 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="btn">click me</button>
-    <!-- <script src="main.js"></script> -->
-    <script src="async.js"></script>
+    <p id="p-first">wyswietl odpowiedź:</p>
+    <script src="examples.js"></script>
   </body>
 </html>
