--- a/css/css-grid/index.html
+++ b/css/css-grid/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <button id="btn">click me</button>
-    <!-- <script src="main.js"></script> -->
-    <script src="async.js"></script>
+    <div class="container">
+      <div class="item-1">item 1</div>
+      <div class="item-2">item 2</div>
+    </div>
   </body>
 </html>
